# wexe

./: .gitignore  Cargo.toml  LICENSE  README.md
config-design/: example.toml  template.toml
src/: main.rs
wexe/: Cargo.toml  build.rs
wexe/src/: config_model.rs  console_colors.rs  lib.rs  main.rs
