[package]
name = "wexe"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[package.metadata.winresource]


[dependencies]
dirs = "6.0.0"
lazy_static = "1.5.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.20"
chrono = "0.4.40"
same-file = "1"
toml_edit = "0.22.24"

[build-dependencies]
winresource = "0.1.19"
